--- a/MekHQ/src/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/src/mekhq/resources/CampaignGUI.properties
@@ -124,6 +124,7 @@ miExportParts.text=Export Parts to a parts file...
 miLoadForces.text=Load Forces from a MUL File...
 miImportPlanets.text=Import Planets from TSV File...
 miExportPlanetsXML.text=Export Planets to XML File...
+miExportFinancesCSV.text=Export Finances to a comma-separated text (CSV) file...
 btnOvertime.toolTipText=If toggled, techs will work up to 12 hour shifts, rather than 8 hours. However, they will also suffer a penalty during overtime hours.
 btnGMMode.toolTipText=If toggled, new options will become available in the right-click menu.
 btnShowAllTechs.toolTipText=If toggled, techs of all types will be available to work on this unit.
