--- a/MekHQ/src/mekhq/resources/MekHQ.properties
+++ b/MekHQ/src/mekhq/resources/MekHQ.properties
@@ -2,7 +2,7 @@
 
 Application.name = MekHQ
 Application.title = MekHQ
-Application.version = 0.43.12-RC6
+Application.version = 0.44.0
 Application.vendor= MekHQ Project
 Application.homepage=https://github.com/MegaMek
 Application.description = A program for managing BattleTech campaigns played via MegaMek or tabletop
