adds a balance line graph and monthly revenue and expenditures to the Finances tab through the JFreeChart library

--- a/MekHQ/.classpath
+++ b/MekHQ/.classpath
@@ -29,5 +29,6 @@
 	<classpathentry kind="lib" path="lib/vecmath.jar"/>
 	<classpathentry kind="lib" path="MegaMek.jar"/>
 	<classpathentry kind="lib" path="MegaMekLab.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
