Now showing medals in PersonViewPanel.

--- a/MekHQ/src/mekhq/resources/Awards.properties
+++ b/MekHQ/src/mekhq/resources/Awards.properties
@@ -5,6 +5,8 @@
 	bronzeStar.text=Bronze Star
 	bronzeStar.xp=3
 	clanInvasionCampaign.description=Partook combat actions in support of clan invasion
+	clanInvasionCampaign.medal=ClanInvasionM.png
+	clanInvasionCampaign.ribbon=ClanInvasion.png
 	clanInvasionCampaign.text=Clan Invasion Campaign
 	clanInvasionCampaign.xp=1
 	combatAchievement.description=Pilot Kills 6
@@ -14,6 +16,8 @@
 	combatAction.text=Combat Action
 	combatAction.xp=2
 	combatCommendation.description=Company Kills 72
+	combatCommendation.medal=CombatCommendationM.png
+	combatCommendation.ribbon=CombatCommendation.png
 	combatCommendation.text=Combat Commendation
 	combatCommendation.xp=2
 	combatCross.description = Pilot kills 12
@@ -23,9 +27,11 @@
 	combatUnitCommendation.text=Combat Unit Commendation
 	combatUnitCommendation.xp=2
 	distinguishedService.description=Batallion kills 324
+	distinguishedService.medal=DistinguishedServiceM.png
 	distinguishedService.text=Distinguished Service
 	distinguishedService.xp=5
 	expeditionary.description=Partook in combat on a house world not covered by a war
+	expeditionary.medal=ExpeditionaryM.png
 	expeditionary.text=Expeditionary
 	expeditionary.xp=1
 	fedcomCivilWarCampaign.description=Partook combat actions in support of fedcom civil war
