--- a/MekHQ/.classpath
+++ b/MekHQ/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry kind="lib" path="MegaMek.jar"/>
 	<classpathentry kind="lib" path="MegaMekLab.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart-1.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-csv-1.5.jar"/>	
 	<classpathentry kind="output" path="bin"/>
 </classpath>
