Ribbons displaying properly.

--- a/MekHQ/src/mekhq/resources/Awards.properties
+++ b/MekHQ/src/mekhq/resources/Awards.properties
@@ -28,16 +28,20 @@
 	combatUnitCommendation.xp=2
 	distinguishedService.description=Batallion kills 324
 	distinguishedService.medal=DistinguishedServiceM.png
+	distinguishedService.ribbon=DistinguishedService.png
 	distinguishedService.text=Distinguished Service
 	distinguishedService.xp=5
 	expeditionary.description=Partook in combat on a house world not covered by a war
 	expeditionary.medal=ExpeditionaryM.png
+	expeditionary.ribbon=Expeditionary.png
 	expeditionary.text=Expeditionary
 	expeditionary.xp=1
 	fedcomCivilWarCampaign.description=Partook combat actions in support of fedcom civil war
 	fedcomCivilWarCampaign.text=Fedcom Civil War Campaign
 	fedcomCivilWarCampaign.xp=1
 	fourthSuccessionWarCampaign.description=Partook in combat actions in support of the 4th succession war
+	fourthSuccessionWarCampaign.ribbon=FourthSuccessionWar.png
+	fourthSuccessionWarCampaign.medal=FourthSuccessionWarM.png
 	fourthSuccessionWarCampaign.text=Fourth Succession War Campaign
 	fourthSuccessionWarCampaign.xp=1
 	galacticService.description=Served a total of 12 months in foreign theatres
@@ -68,6 +72,8 @@
 	houseUnitCitation.text=House Unit Citation
 	houseUnitCitation.xp=2
 	humanitarianService.description=Defense of civilian person or structures
+	humanitarianService.medal=HumanitarianServiceM.png
+	humanitarianService.ribbon=HumanitarianService.png
 	humanitarianService.text=Humanitarian Service
 	humanitarianService.xp=1
 	legionOfMerit.description=Company kills 144
@@ -80,6 +86,8 @@
 	meritousUnitCommendation.text=Meritous Unit Commendation
 	meritousUnitCommendation.xp=1
 	peripheryExpeditionary.description=Partook in combat operations on a periphery world
+	peripheryExpeditionary.medal=PeripheryExpeditionaryM.png
+	peripheryExpeditionary.ribbon=PeripheryExpeditionary.png
 	peripheryExpeditionary.text=Priphery Expeditionary
 	peripheryExpeditionary.xp=1
 	pow.description=Taken prisoner during combat
@@ -92,11 +100,17 @@
 	silverStar.text=Silver Star
 	silverStar.xp=4
 	taskForceSerpentCampaign.description=Partook combat actions in support of task force serpent
+	taskForceSerpentCampaign.medal=TaskForceSerpentM.png
+	taskForceSerpentCampaign.ribbon=TaskForceSerpent.png
 	taskForceSerpentCampaign.text=Task Force Serpent Campaign
 	taskForceSerpentCampaign.xp=1
 	thirdSuccessionWarCampaign.description=Partook in  combat actions in support of the 3rd succession war
+	thirdSuccessionWarCampaign.ribbon=ThirdSuccessionWar.png
+	thirdSuccessionWarCampaign.medal=ThirdSuccessionWarM.png
 	thirdSuccessionWarCampaign.text=Third Succession War Campaign
 	thirdSuccessionWarCampaign.xp=1
 	warOf3039Campaign.description=Partook in combat actions in support of the war of 3039
+	warOf3039Campaign.medal=WarOf3039M.png
+	warOf3039Campaign.ribbon=WarOf3039.png
 	warOf3039Campaign.text=War of 3039 Campaign
 	warOf3039Campaign.xp=1
