add Java vendor and version to the About dialog

--- a/MekHQ/src/mekhq/resources/MekHQAboutBox.properties
+++ b/MekHQ/src/mekhq/resources/MekHQAboutBox.properties
@@ -1,3 +1,5 @@
+javaVendorLabel.text=Java Vendor\:
+javaVersionLabel.text=Java Version\:
 versionLabel.text=Product Version\:
 versionLabelMegaMek.text=MegaMek Version\:
 versionLabelMegaMekLab.text=MegaMekLab Version\:
