Feature: Pay for Repairs This adds the optional Pay for Repairs from Campaign Operations.

--- a/MekHQ/src/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/src/mekhq/resources/CampaignOptionsDialog.properties
@@ -94,6 +94,8 @@ useQuirksBox.text=Use Quirks
 useQuirksBox.toolTipText=Allow units to have StratOps quirks
 payForPartsBox.text=Pay For Parts
 payForPartsBox.toolTipText=Pay the c-bill cost of any replacement parts
+payForRepairsBox.text=Pay For Repairs
+payForRepairsBox.toolTipText=CamOps p46 Repairs cost 20% of a parts list price. This is for equipment repairs only and does not count armor repairs.\nThis is reimbursed by Battle Loss Compensation.
 payForUnitsBox.text=Pay For New Units
 payForUnitsBox.toolTipText=Pay the c-bill cost for any new units (Meks, vees, etc.)
 payForSalariesBox.text=Pay for personnel salaries
