Replaces Heal with Edit Hits, implements #829

--- a/MekHQ/src/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/src/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -56,7 +56,8 @@ edgeTriggerAcquireCheck.text=Fail Acquisition check
 edit.text=Edit...
 editBiography.text=Edit Biography
 editCallsign.text=Edit Callsign
-editInjuries.text=Edit Injuries
+editHits.text=Edit Hits...
+editInjuries.text=Edit Injuries...
 editKillLog.text=Edit Kill Log...
 editPersonnelLog.text=Edit Personnel Log...
 enterNewCallsign.text=Enter new callsign
@@ -67,7 +68,6 @@ gained.format=%s gained %s\!
 gainedEdge.format=%s gained edge point\!
 giveRandomBloodname.text=Give Random Bloodname
 gmMode.text=GM Mode
-healPerson.text=Heal Person
 imprison.text=Imprison
 improved.format=%s improved %s\!
 laserSpecialist.text=Laser Specialist
