adds an in-memory daily log history that is reset at each game launch, addresses issue: #775 option to enable/disable is in the Campaign Options

--- a/MekHQ/src/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/src/mekhq/resources/CampaignGUI.properties
@@ -79,6 +79,7 @@ miCargoReport.text=Cargo Report...
 miHangarBreakdown.text=Hangar Breakdown...
 menuCommunity.text=Community
 miChat.text=Connect to Chat...
+miShowHistoricalReportLog.text=Show Historical Daily Report Log
 btnDoTask.toolTipText=Make the selected tech perform the selected task
 btnDoTask.text=Do Task
 #NOI18N
