--- a/MekHQ/src/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/src/mekhq/resources/CampaignOptionsDialog.properties
@@ -26,6 +26,7 @@ panMercenary.IntOpsPayment.tooltip=Base contract payment on percentage of TO&E u
 panMercenary.FMMRPayment.title=Base contract payment on personnel payroll (FM:Mr)
 panMercenary.FMMRPayment.tooltip=Base contract payment on personnel payroll (FM:Mr)
 panAtB.TabConstraints.tabTitle=Against the Bot
+misc.TabConstraints.tabTitle=Miscellaneous
 useEraModsCheckBox.text=Use era mods for repair rolls
 useEraModsCheckBox.toolTipText=Use faction-specific era mods for repair rolls
 assignedTechFirstCheckBox.text=Place tech assigned to unit at the top of the list for repairs
@@ -309,3 +310,5 @@ chkCapturePrisoners.text=Capture Prisoners in Scenarios
 chkCapturePrisoners.toolTipText=If checked, you will have the opportunity to capture prisoners when resolving scenarios
 chkAssignPortraitOnRoleChange.text=Automatically assign portrait on role change
 chkAssignPortraitOnRoleChange.toolTipText=With this enabled, a person without a portrait will automatically gain a random portrait when their primary role is switched to one of those selected below
+chkShowHistoricalDailyReport.text=Temporarily retain daily log history
+chkShowHistoricalDailyReport.toolTipText=Keeps a limited historical daily report in-memory during the gaming session.  May result in increased memory usage.
