--- a/MekHQ/build.xml
+++ b/MekHQ/build.xml
@@ -118,7 +118,7 @@
                 <attribute name="Class-Path" value=". ${classpath.manifest} ${megamek} ${megameklab}"/>
             </manifest>
             <fileset dir="${src}" includes="**/*.properties"/>
-			<metainf dir="${src}/META-INF" includes="**/services/*"/>
+			<metainf dir="${src}/META-INF" includes="services/**"/>
         </jar>
         <echo message="Built-By: ${user.name}"/>
         <echo message="Main-Class: ${class.main}"/>
