show tips/suggestions on loading screen add item under Help menu for viewing all tips

--- a/MekHQ/src/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/src/mekhq/resources/CampaignGUI.properties
@@ -60,6 +60,7 @@ panMap.TabConstraints.tabTitle=Interstellar Map
 panBriefing.TabConstraints.tabTitle=Briefing Room
 panMekLab.TabConstraints.tabTitle=Mek Lab
 jLabel2.text=Nothing Implemented Yet!
+tipsMenu.text=Tips and Suggestions
 btnAssignDoc.text=Assign
 btnUnassignDoc.text=Unassign
 menuMarket.text=Marketplace
