--- a/MekHQ/src/mekhq/resources/AtBScenarioBuiltIn.properties
+++ b/MekHQ/src/mekhq/resources/AtBScenarioBuiltIn.properties
@@ -8,9 +8,9 @@ battleDetails.extraction.attacker.observations=Defender controls the battlefield
 battleDetails.extraction.defender.victory=Must destroy all enemy's civilian units and 1/3 of other units before the end of turn 10.
 battleDetails.extraction.defender.observations=Defender controls the battlefield after the battle.
 
-battleDetails.chase.attacker.victory=Must reach north edge with 50% of starting forces.
+battleDetails.chase.attacker.victory=Must reach the narrow edge opposite from the start with 50% of starting forces.
 battleDetails.chase.attacker.observations=Defender controls the battlefield after the battle.
-battleDetails.chase.defender.victory=Must prevent at least 50% of enemy from reaching the north edge.
+battleDetails.chase.defender.victory=Must prevent at least 50% of enemy from reaching the narrow edge opposite from the start.
 battleDetails.chase.defender.observations=Defender controls the battlefield after the battle.
 
 battleDetails.holdTheLine.attacker.victory=Must destroy 1/2 of the enemy units while having less than 1/3 of your own forces destroyed.
