--- a/MekHQ/src/mekhq/resources/ContractMarketDialog.properties
+++ b/MekHQ/src/mekhq/resources/ContractMarketDialog.properties
@@ -32,5 +32,7 @@ lblStraightSupport.text=Straight Support:
 lblBattleLossComp.text=Battle Loss Compensation:
 lblRequiredLances.text=Required Lances:
 
+lblRenegotiate.text=Renegotiate
+
 # reports
 report.UnabletoGMContract=Unable to GM-generate contract from the current location. Increase contract search radius or travel to a border world for better odds of success.
