Expressed explicitly the given months for the monthly estimates.

--- a/MekHQ/src/mekhq/resources/ContractPaymentBreakdown.properties
+++ b/MekHQ/src/mekhq/resources/ContractPaymentBreakdown.properties
@@ -8,10 +8,12 @@ lblOfNetIncome.text=of Contract Pay
 lblOfGrossIncome.text=of Gross Contract Pay
 lblAdvanceCashflow.text=Advance Money
 lblSignBonusAmount1.text=Signing Bonus:
-lblMonthlyCashflow.text=Monthly Money (est.)
+lblMonthlyCashflow.text=Total Monthly Money (est.)
 lblFeeAmount1.text=MRBC Fee:
 lblEstimatedOverheadExpenses.text=Total Overhead (est.):
 lblEstimatedMaintenanceExpenses.text=Total Maintenance (est.):
 lblEstimatedPayrollExpenses.text=Total Payroll (est.):
 lblTransportationExpenses.text=Transportation Expenses (2-way)
 lblEstimatedProfit.text=Estimated Profit
+lblMonth.text=month
+lblMonths.text=months
