--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ allprojects {
 	
 	repositories {
 		mavenLocal()
+		maven {
+			url 'https://github.com/MegaMek/mavenrepo/raw/master'
+		}
 		jcenter()
 	}
 }
