--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -25,7 +25,11 @@ sourceSets {
 
 dependencies {
 	implementation "org.megamek:megamek${mmBranchTag}:0.45.1-SNAPSHOT"
-	implementation "org.megamek:megameklab${mmBranchTag}:0.45.1-SNAPSHOT"
+	implementation ("org.megamek:megameklab${mmlBranchTag}:0.45.1-SNAPSHOT") {
+		// We may want to specify different branches for MM and MML, so we need to exclude
+		// the transitive MM dependency
+		exclude group: 'org.megamek', module: "megameklab${mmlBranchTag}"
+	}
 	
 	// We have been using a modified version of svgSalamander in MML, which we'll keep around until
 	// the conversion to batik is complete.
