--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -23,6 +23,10 @@ sourceSets {
     }
 }
 
+configurations {
+	jarbundler
+}
+
 dependencies {
 	implementation "org.megamek:megamek${mmBranchTag}:0.45.1-SNAPSHOT"
 	implementation ("org.megamek:megameklab${mmlBranchTag}:0.45.1-SNAPSHOT") {
@@ -47,6 +51,8 @@ dependencies {
 	runtimeOnly 'org.glassfish.jaxb:jaxb-core:2.3.0'
 	runtimeOnly 'com.sun.activation:javax.activation:1.2.0'
 
+	jarbundler 'com.ultramixer.jarbundler:jarbundler-core:3.3.0'
+
     testImplementation 'junit:junit:4.12' 
 	testImplementation 'org.mockito:mockito-core:2.20.1'
 }
@@ -55,19 +61,22 @@ mainClassName = 'mekhq.MekHQ'
 
 ext {
 	jvmOptions = ['-Xmx1024m']
-	dataDir = "data"
-	confDir = "mmconf"
-	logDir = "logs"
-	docDir = "docs"
-	libDir = "lib"
-	unitFilesDir = "data/mechfiles"
+	data = 'data'
+	conf = 'mmconf'
+	log = 'logs'
+	docs = 'docs'
+	lib = 'lib'
+	plugins = 'plugins'
 	distributionDir = "${buildDir}/distributions"
 	fileStagingDir = "${buildDir}/files"
 	repoDir = "${buildDir}/repo/mekhq"
 	mmRepoDir = "${buildDir}/repo/megamek"
 	mmlRepoDir = "${buildDir}/repo/megameklab"
-	scriptTemplate = "startScriptTemplate.txt"
 	mavenPublishDir = "${buildDir}/mavenrepo"
+	scriptsDir = "${projectDir}/scripts"
+	scriptTemplate = "${scriptsDir}/startScriptTemplate.txt"
+	osxApplicationStub = "${scriptsDir}/universalJavaApplicationStub"
+	osxBundleDir = "${buildDir}/osxBundle"
 }
 
 jar {
@@ -75,7 +84,7 @@ jar {
 	manifest {
 	    attributes "Main-Class": mainClassName
 	    attributes 'Class-Path' : project.sourceSets.main.runtimeClasspath.files
-	    	.findAll { it.name.endsWith(".jar") }.collect { "${libDir}/${it.name}" }.join(' ')
+	    	.findAll { it.name.endsWith(".jar") }.collect { "${lib}/${it.name}" }.join(' ')
 	}
 }
 
@@ -83,17 +92,18 @@ task stageFiles(type: Copy) {
 	description = 'Stages files that are to be copied into the distribution.'
 	
 	from projectDir
-	include "${confDir}/**"
-	include "${docDir}/**"
-	include "${dataDir}/universe/"
-	include "${dataDir}/mapgen/"
-	include "${dataDir}/names/bloodnames/"
-	include "${dataDir}/images/awards/"
-	include "${dataDir}/images/force/"
-	include "${dataDir}/images/portraits/"
-	include "${dataDir}/images/fluff/mech/*.png"
-	include "${dataDir}/images/misc/"
-	include "${dataDir}/images/universe/"
+	include "${conf}/**"
+	include "${docs}/**"
+	include "${data}/universe/"
+	include "${data}/mapgen/"
+	include "${data}/names/bloodnames/"
+	include "${data}/images/awards/"
+	include "${data}/images/force/"
+	include "${data}/images/portraits/"
+	include "${data}/images/fluff/mech/*.png"
+	include "${data}/images/misc/"
+	include "${data}/images/universe/"
+	include "${project.ext.plugins}/"
 
 	into fileStagingDir
 }
@@ -101,13 +111,13 @@ task stageFiles(type: Copy) {
 task createLogDir (dependsOn: stageFiles) {
 	description 'Creates the log directory and the timestamp file.'
 	doLast {
-		mkdir "${fileStagingDir}/${logDir}"
-		ant.touch(file: "${fileStagingDir}/${logDir}/timestamp")
+		mkdir "${fileStagingDir}/${log}"
+		ant.touch(file: "${fileStagingDir}/${log}/timestamp")
 	}
 }
 
-task unixStartScript (type: CreateStartScripts) {
-	description = 'Create shell script for *nix distribution.'
+task createStartScripts (type: CreateStartScripts) {
+	description = 'Create shell script for generic distribution.'
 	applicationName = 'hq'
 	mainClassName = project.mainClassName
 	outputDir = startScripts.outputDir
@@ -121,6 +131,42 @@ task unixStartScript (type: CreateStartScripts) {
 	doLast {
 		// The start script assumes all the files on the classpath will be in the lib directory.
 		unixScript.text = unixScript.text.replace('lib/MekHQ', 'MekHQ')
+		windowsScript.text = windowsScript.text.replace('lib\\MekHQ', 'MekHQ')
+		// The Windows script just has a single line that needs to be changed to put the script in the root,
+		// so we'll do a simple replace
+		windowsScript.text = windowsScript.text.replace('set APP_HOME=%DIRNAME%..', '')
+	}
+}
+
+task createOSXBundle (dependsOn: jar) {
+	ext.appName = 'MekHQ'
+	// The jar directory is hard coded into jarbundler and has no public accessor
+	ext.jarSubdir = "${appName}.app/Contents/Resources/Java"
+	doLast {
+		mkdir osxBundleDir
+		ant.taskdef(name: 'jarbundler',
+			classname: 'com.ultramixer.jarbundler.JarBundler',
+			classpath: configurations.jarbundler.asPath)
+		ant.jarbundler (
+				name: ext.appName,
+				shortName: 'MekHQ',
+				build: rootProject.version,
+				version: rootProject.version.replace('-SNAPSHOT', ''),
+				bundleid: 'org.megamek.MekHQ',
+				mainClass: project.mainClassName,
+				stubfile: osxApplicationStub,
+				dir: osxBundleDir,
+				jar: "${jar.destinationDir}/${jar.archiveName}",
+				jvmversion: '1.8+',
+				icon: "${projectDir}/${data}/images/misc/mekhq.icns",
+				useJavaXKey: 'true',
+				workingdirectory: '$APP_PACKAGE/../',
+				extraclasspath: files(project.sourceSets.main.runtimeClasspath.files)
+	    			.filter { it.name.endsWith(".jar") }.collect { '$JAVAROOT/lib/' + it.name}.join(","),
+				vmoptions: '-Xmx1024m') {
+			javaproperty (name: 'apple.awt.brushMetal', value: 'true')
+			javaproperty (name: 'apple.laf.useScreenMenuBar', value: 'true')
+		}
 	}
 }
 
@@ -147,11 +193,11 @@ distributions {
 			from (fileStagingDir) {
 				rename 'history.txt', 'mm-history.txt'
 			}
-			from(unixStartScript.unixScript)
+			from(startScripts)
 			from(jar)
 			from (project.sourceSets.main.runtimeClasspath.files
     				.findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }) {
-    			into "${libDir}"
+    			into "${lib}"
 			}
 			
 			duplicatesStrategy = 'exclude'
@@ -185,8 +231,33 @@ distributions {
 				include '*.exe'
 			}
 			from (project.sourceSets.main.runtimeClasspath.files
-    				.findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }) {
-    			into "${libDir}"
+    				.findAll { it.name.endsWith(".jar") }) {
+    			into "${lib}"
+			}
+			duplicatesStrategy = 'exclude'
+		}
+	}
+	mac {
+		baseName = 'mekhq-hq'
+		contents {
+			from osxBundleDir
+			from ("${mmDir}/megamek/build/files")
+			from ("${mmlDir}/build/files/data/fonts") {
+				into "data/fonts"
+			}
+			from ("${mmlDir}/build/files/data/images") {
+				into "data/images"
+			}
+			from ("${mmlDir}/docs/history.txt") {
+				rename 'history.txt', 'mml-history.txt'
+				into 'docs'
+			}
+			from (fileStagingDir) {
+				rename 'history.txt', 'mm-history.txt'
+			}
+			from (project.sourceSets.main.runtimeClasspath.files
+    				.findAll { it.name.endsWith(".jar") }) {
+    			into "${lib}"
 			}
 			duplicatesStrategy = 'exclude'
 		}
@@ -206,7 +277,7 @@ task stageMM (type: GradleBuild) {
 	
 	buildFile = "${mmDir}/build.gradle"
 	dir = "${mmDir}"
-	tasks = [ 'jar', 'stageFiles', 'createExe', 'unixStartScript' ]
+	tasks = [ 'jar', 'stageFiles', 'createExe', 'startScripts' ]
 }
 
 task stageMML (type: GradleBuild) {
@@ -215,7 +286,7 @@ task stageMML (type: GradleBuild) {
 	
 	buildFile = "${mmlDir}/build.gradle"
 	dir = "${mmlDir}"
-	tasks = [ 'jar', 'stageFiles', 'createExe', 'unixStartScript' ]
+	tasks = [ 'jar', 'stageFiles', 'createExe', 'startScripts' ]
 }
 
 windowsDistZip {
@@ -231,8 +302,16 @@ unixDistTar {
 	dependsOn stageFiles
 	dependsOn stageMM
 	dependsOn stageMML
-	dependsOn unixStartScript
+	dependsOn startScripts
 	compression = Compression.GZIP
+}
+
+macDistTar {
+	description = 'Creates mac OSX distribution'
+	dependsOn stageFiles
+	dependsOn createOSXBundle
+	extension = 'tar.bz2'
+	compression = Compression.BZIP2
 }
 
 // The repository can only be cloned into an empty directory so we need to delete anything left over
@@ -300,6 +379,7 @@ task assembleDist(overwrite: true) {
 	dependsOn stageMML
 	dependsOn unixDistTar
 	dependsOn windowsDistZip
+	dependsOn macDistTar
 	dependsOn sourceZip
 	dependsOn sourceTar
 }
