--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 		exclude group: 'org.megamek', module: "megameklab${mmlBranchTag}"
 		// We're not using any scripting, and this module will also pull in a rather large jython library
 		exclude group: 'org.apache.xmlgraphics', module: 'batik-script'
+		// Looks like a misconfiguration; the individual batik modules should not declare a dependency on batik-all
+		exclude group: 'org.apache.xmlgraphics', module: 'batik-all'
 	}
 	
 	// We have been using a modified version of svgSalamander in MML, which we'll keep around until
