copy license and SubmitBug docs to distro.

--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -121,6 +121,8 @@ task stageFiles(type: Copy) {
 	include "${data}/images/universe/"
 	include "${project.ext.plugins}/"
 	include "${campaigns}/"
+	include 'license.txt'
+	include 'SubmitBug.html'
 
 	into fileStagingDir
 
