--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ subprojects {
 }
 
 ext {
-	gitRoot = 'https://github.com/MegaMek/mekhq.git'
+	hqGitRoot = 'https://github.com/MegaMek/mekhq.git'
 	mmGitRoot = 'https://github.com/MegaMek/megamek.git'
 	mmlGitRoot = 'https://github.com/MegaMek/megameklab.git'
 	// Work on MML or MHQ sometimes requires changes in MM as well. The maven publishing tasks use
